// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapValidatorAdvanced combination of input, result & error nested then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "22:25 PrimitiveLiteral - Wrong Structure: expected INVALID_CHARACTER or INVALID_PERSON, but got \\"NOT_FOUND\\"",
  },
}
`;

exports[`MapValidatorAdvanced combination of input, result & error nested then validation will pass 1`] = `
Object {
  "profile-provider": Object {
    "warnings": "19:49 PrimitiveLiteral - Wrong Structure: expected INVALID_CHARACTER or INVALID_PERSON, but got \\"PERSON_NOT_FOUND\\"",
  },
}
`;

exports[`MapValidatorAdvanced combination of input, result & error swapi get character information then validation will pass 1`] = `
Object {
  "profile-provider": Object {},
}
`;

exports[`MapValidatorAdvanced combination of input, result & error validating binary expression then validation will pass 1`] = `
Object {
  "profile-provider": Object {},
}
`;
